# wps-catcher

./: .gitignore  CMakeLists.txt  README.md  flash.sh  partition.csv  platformio.ini  sdkconfig.defaults  sdkconfig.esp32  sdkconfig.esp32c3  sdkconfig.esp32s3
data/: config.html  index.html  login.html  wps.html
data/css/: common.css
data/js/: common.js  config.js  wps.js
include/: config.h  dns.h  nvs_keys.h  server.h  server_api.h  wifi_manager.h  wifi_saved.h  wifi_wps.h
src/: CMakeLists.txt  config.c  dns.c  main.c  server.c  server_api.c  wifi_manager.c  wifi_saved.c  wifi_wps.c
